# cwstudio

./: ChangeLog  Makefile.in  README  README.md  aclocal.m4  build.sh  configure  configure.ac  osx-build.sh
branches/0.9.x/: AUTHORS  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
branches/0.9.x/man/: cwstudio.1
branches/0.9.x/openbsd/pkg/: DESCR
branches/0.9.x/src/: Makefile.am  Makefile.in  cwcli.c  cwcurses.c  cwgen.h  cwstudio.c  getopt_long_only.c  init.c  morse.c  noise.c  play.c  random.c  wav.c
m4/: ax_alsa.m4
man/: Makefile.in
openbsd/: Makefile  distinfo
openbsd/pkg/: PLIST
src/: BladeMP3EncDLL.h  Makefile.am  Makefile.in  conf.c  config.h.in  cwcli.c  cwcli.icns  cwcurses.c  cwcurses.icns  cwgen.h  cwstudio-res.rc  cwstudio.c  cwstudio.h  cwstudio.res  cwstudiowx.cc  cwtest.c  cwwx.cc  cwwx.icns  getopt.h  init.c  noise.c  play.c  sound.c  wav.c
tags/0.9.0/: INSTALL  Makefile.in  NEWS
tags/0.9.0/src/: Makefile.in  fft.c  random.c  sound.c
tags/0.9.1/: aclocal.m4  configure  configure.ac
tags/0.9.1/man/: cwstudio.1
tags/0.9.1/src/: Makefile.in  calls.c  cwstudio.c
tags/0.9.2/: Makefile.am  Makefile.in  configure.ac
tags/0.9.2/src/: cwgen.h  fft.c
tags/0.9.3/: Makefile.in  configure.ac
tags/0.9.3/src/: cwwx.cc  init.c  play.c  wav.c
tags/0.9.4/: AUTHORS  aclocal.m4  configure
tags/0.9.4/man/: Makefile.in
tags/0.9.4/src/: Makefile.am  Makefile.in  config.h.in  cwcli-res.rc  cwcurses-res.rc  cwcurses.c  cwwx-res.rc  cwwx.cc  vvv.c
tags/0.9.5/: ChangeLog  aclocal.m4  configure.ac
tags/0.9.5/man/: Makefile.am
tags/0.9.5/src/: GC.cfg  Makefile.am  cwgen.h  cwstudio.h  noise.c
tags/0.9.5/trunk/man/: cwstudio.1
tags/0.9.5/trunk/src/: fft.c  sound.c
tags/0.9.6/src/: Makefile.in  calls.c  cwstudio.h  cwtest.c  cwwx.cc  morse.c  noise.c  sound.c
trunk/: AUTHORS  ChangeLog  INSTALL  Makefile.in  aclocal.m4  build.sh  configure  configure.ac
trunk/man/: Makefile.in
trunk/src/: Makefile.am  Makefile.in  config.h.in  cwcli.c  cwcli.icns  cwcurses.c  cwgen.h  cwstudio.c  cwstudio.h  cwtest.c  cwwx.cc  init.c  morse.c  noise.c  play.c  sound.c  vvv.c  wav.c  words.c
